# catch2_play

./: CMakeLists.txt  README.md
include/: Summer.hpp
src/: .clang_check_config  Summer.cpp  main.cpp
tests/: .clang_check_config  summer_tests.cpp
